<resources>
    <string name="app_name">Planet\'s Position</string>
    <string name="pos_title">Sky Position</string>
    <string name="up_title">What\'s Up Now</string>
    <string name="loc_title">Location</string>
    <string name="solar_title">Solar Eclipses</string>
    <string name="lunar_title">Lunar Eclipses</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_update">Update</string>
    <string name="pos_button">Sky\nPosition</string>
    <string name="up_button">What\'s\nUp Now</string>
    <string name="solar_button">Solar\nEclipses</string>
    <string name="lunar_button">Lunar\nEclipses</string>
    <string name="real_button">Real Time\nPosition</string>
    <string name="loc_button">Update\nLocation</string>
    <string name="ecl_map">Eclipse Map</string>
    <string name="save">Save</string>
    <string name="loc_down">GPS</string>
    <string name="loc_enter">Update Location Data</string>
    <string name="loc_lat">Latitude (\u00b0)</string>
    <string name="loc_lng">Longitude (\u00b0)</string>
    <string name="loc_ele">Elevation (m)</string>
    <string name="loc_gmt">GMT offset (hr)</string>
    <string name="loc_north">North</string>
    <string name="loc_south">South</string>
    <string name="loc_east">East</string>
    <string name="loc_west">West</string>
    <string name="data_ra">Right Ascension</string>
    <string name="data_dec">Declination</string>
    <string name="data_az">Azimuth</string>
    <string name="data_alt">Altitude</string>
    <string name="data_dis">Distance</string>
    <string name="data_mag">Magnitude</string>
    <string name="data_rs">Rise/Set Time</string>
    <string name="data_set">Set Time</string>
    <string name="data_rise">Rise Time</string>
    <string name="ecl_prev">Previous\nEclipses</string>
    <string name="ecl_next">Next\nEclipses</string>
    <string name="ecl_date">Date (UTC)</string>
    <string name="ecl_type">Type</string>
    <string name="ecl_local">Local</string>
    <string name="planet_name">Name</string>
    <string name="below_hor">Object is below the horizon</string>
    <string name="alert_string">There is no location data saved.
        You can either download the data using GPS or manually enter the data.</string>
    <string name="alert_down">Download</string>
    <string name="alert_manual">Manual</string>
    <string name="up_dialog">Calculating planets,\nplease wait…</string>
    <string name="eclipse_dialog">Calculating eclipses,\nplease wait…</string>
    <string name="location_dialog">Downloading Location.\nPlease wait…</string>
    <string name="copy_dialog">Copying files.\nPlease wait…</string>
    <string name="filter_prompt">Filter planets</string>
    <string-array name="filter_array">
        <item>Naked eye visible</item>
        <item>View all planets</item>
    </string-array>
    <string name="planet_prompt">Choose a planet</string>
    <string-array name="planets_array">
        <item>Sun</item>
        <item>Moon</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
        <item>Pluto</item>
    </string-array>
    <string-array name="gps_array">
        <item>-12:00</item>
        <item>-11:00</item>
        <item>-10:00</item>
        <item>-9:30</item>
        <item>-9:00</item>
        <item>-8:00</item>
        <item>-7:00</item>
        <item>-6:00</item>
        <item>-5:00</item>
        <item>-4:30</item>
        <item>-4:00</item>
        <item>-3:30</item>
        <item>-3:00</item>
        <item>-2:00</item>
        <item>-1:00</item>
        <item>0:00</item>
        <item>+1:00</item>
        <item>+2:00</item>
        <item>+3:00</item>
        <item>+3:30</item>
        <item>+4:00</item>
        <item>+4:30</item>
        <item>+5:00</item>
        <item>+5:30</item>
        <item>+5:45</item>
        <item>+6:00</item>
        <item>+7:00</item>
        <item>+8:00</item>
        <item>+8:45</item>
        <item>+9:00</item>
        <item>+9:30</item>
        <item>+10:00</item>
        <item>+10:30</item>
        <item>+11:00</item>
        <item>+11:30</item>
        <item>+12:00</item>
        <item>+12:45</item>
        <item>+13:00</item>
        <item>+14:00</item>
    </string-array>
    <string name="main_about">Planet\'s Position v1.6.2\n\n
        Planets Position is a program to calculate the position of the planets
		in the night sky based on a given location on Earth.\n\n
		License and Copyright\n\n
		Copyright © 2012 Tim Gaddis\n\n
		This program is free software: you can redistribute it and/or modify it
		under the terms of the GNU General Public License as published by the 
		Free Software Foundation, either version 3 of the License, or (at your 
		option) any later version.\n\n
		This program is distributed in the hope that it will be useful, but 
		WITHOUT ANY	WARRANTY; without even the implied warranty of 
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU 
		General Public License for more details.\n\n
		You should have received a copy of the GNU General Public License along 
		with this program. If not, see \n 
		http://www.gnu.org/licenses/.\n\n
		Feedback can be sent to\n
		planets.position@gmail.com\n
		or @planetsposition on Twitter\n\n
		Source code available at GitHub.\n
		https://github.com/timgaddis/Planets-Position\n\n
		Swiss Ephemeris code is used in this program for planetary position
		calculations.\n
		http://www.astro.com/swisseph/swephinfo_e.htm?lang=e\n\n
		Change Log\n\n
		Version 1.6.2\n
        - Fixed bug that caused crashes in background threads.\n
        - Fixed bug that caused IllegalStateException error.\n\n
		Version 1.6.1\n
		- Removed Google Maps from devices that don\'t have access to the Google Maps library.\n\n
		Version 1.6\n
		- Added North, South, East, West selections to the update location activity.\n
 		- Added Eclipse Map activity that displays eclipse paths on Google Maps.\n
 		- Added Internet permission for use with Google Maps.\n
 		- Updated menu icons to be the same for all resolutions.\n
 		- Fixed bug in User Location activity where new location is not being used after save.\n\n
		Version 1.5.4\n
		- Fixed force close at startup for devices with Android 2.X and below.\n
		- Added change log to about page.\n\n
		Version 1.5.3\n
		- Fixed forced close when leaving the Real Time Position activity.\n\n
		Version 1.5.2\n
		- Fixed force close when selecting next or prevoius in eclipse activities.\n
 		- Fixed progress dialog not closing in User Location activity.\n\n
 		Version 1.5.1\n
		- Fixed NumberFormatException in User Location activity when trying to save non-numbers.\n
 		- Fixed NullPointerException in main activity when progress dialog is showing.\n
		- Fixed IllegalStateException when leaving User Location activity without saving a location.\n\n
		Version 1.5\n
		- Changed name of app to Planet\'s Position.\n
		- Updated the database and dialog code to be ICS compliant.\n
		- Redesigned UI to work better with tablets.\n
		- Renamed Planet\'s Position activity to Sky Position.\n
		- Moved user location to Update Location activity.\n</string>
    <string name="main_help">Initially, location data needs to be saved for the position 
		calculations.\n
		The two options are to retrieve location data from GPS or manually 
		enter all of the data.  The location data is then saved to the 
		program.\n\n
		The Sky Position screen lets you select a planet and a date 
		and time, then it will calculate the position.\n\n
		The What\'s Up Now screen lists what planets are up for the current 
		date and time of the device for the given location.\n\n
		The Solar Eclipse screen lists solar eclipses and indicates which of 
		them are visible at the location saved on the device.\n\n
		The Lunar Eclipse screen lists lunar eclipses and indicates which of 
		them are visible at the location saved on the device.\n\n
		The Real Time Position screen is the current real time position of the 
		selected planet.\n</string>
    <string name="pos_help">The Planet, Local Date, and Local Time fields are user changeable.
		Initially the Local Date and Local Time are set to the current date and
		time of the device.\n\n
		When a planet is selected, 8 values are calculated.\n\n
		Right Ascension:\n
		The position on the celestial sphere east of the Vernal Equinox.\n
		http://en.m.wikipedia.org/wiki/Right_ascension\n\n
		Declination:\n
		The position on the celestial sphere north or south of the celestial
		equator.\n
		http://en.m.wikipedia.org/wiki/Declination\n\n
		Azimuth:\n
		The compass direction for the planet\'s position for the given
		location.\n
		http://en.m.wikipedia.org/wiki/Azimuth\n\n
		Altitude:\n
		The angle above the horizon of the given planet.\n
		http://en.m.wikipedia.org/wiki/Altitude_(astronomy)\n\n
		Distance:\n
		The distance of the planet from the Earth in astronomical units.\n
		http://en.m.wikipedia.org/wiki/Astronomical_unit\n\n
		Magnitude\n
		The brightness of a planet on a logarithmic scale, where the smaller the
		number, the brighter the planet.\n
		http://en.m.wikipedia.org/wiki/Magnitude_(astronomy)\n\n
		Rise and Set Times\n
		The times at which the planet rises and sets for the given location.\n
		http://en.m.wikipedia.org/wiki/Sun_rise\n
		http://en.m.wikipedia.org/wiki/Sunset\n</string>
    <string name="up_help">This is a list of the planets above the horizon at the current date and
		time.\n\n
		7 values are calculated for each planet.\n\n
		Right Ascension:\n
		The position on the celestial sphere east of the Vernal Equinox.\n
		http://en.m.wikipedia.org/wiki/Right_ascension\n\n
		Declination:\n
		The position on the celestial sphere north or south of the celestial
		equator.\n
		http://en.m.wikipedia.org/wiki/Declination\n\n
		Azimuth:\n
		The compass direction for the planet\'s position for the given
		location.\n
		http://en.m.wikipedia.org/wiki/Azimuth\n\n
		Altitude:\n
		The angle above the horizon of the given planet.\n
		http://en.m.wikipedia.org/wiki/Altitude_(astronomy)\n\n
		Distance:\n
		The distance of the planet from the Earth in astronomical units.\n
		http://en.m.wikipedia.org/wiki/Astronomical_unit\n\n
		Magnitude\n
		The brightness of a planet on a logarithmic scale, where the smaller the
		number, the brighter the planet.\n
		http://en.m.wikipedia.org/wiki/Magnitude_(astronomy)\n\n
		Set Time\n
		The time at which the planet sets for the given location.\n
		http://en.m.wikipedia.org/wiki/Sunset\n</string>
    <string name="solarEcl_help">When an eclipse is selected, 6 values are calculated.\n\n
        Eclipse Types:\n
        Total Eclipse\n
        Annular Eclipse\n
        Partial Eclipse\n
        Hybrid Eclipse\n
        http://en.m.wikipedia.org/wiki/Solar_eclipse#Types\n\n
        Azimuth:\n
        The compass direction for the Sun\'s position for the given location.\n
        http://en.m.wikipedia.org/wiki/Azimuth\n\n
        Altitude:\n
        The angle above the horizon of the Sun.\n
        http://en.m.wikipedia.org/wiki/Altitude_(astronomy)\n\n
        Magnitude:\n
        The brightness of the eclipse on a logarithmic scale, where the smaller
        the number, the brighter the eclipse.\n
        http://en.m.wikipedia.org/wiki/Magnitude_(astronomy)\n\n
        Saros Number:\nSaros Member Number:\n
        The saros is a a period of 223 synodic months that can be used to 
        predict eclipses of the Sun and Moon\n
        http://eclipse.gsfc.nasa.gov/SEsaros/SEsaros.html\n
        http://en.m.wikipedia.org/wiki/Saros_number\n\n
        Eclipse Map is the path of totality for total, anular, or hybrid eclipses 
        or maximum eclipse for partial eclipses.\n</string>
</resources>