<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp" >

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/loc_enter"
        android:textColor="@color/text_color"
        android:textSize="21sp" />

    <View
        android:id="@+id/view01"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/title"
        android:background="#FFFFFFFF" />

    <TextView
        android:id="@+id/text01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view01"
        android:text="@string/loc_lat"
        android:textColor="@color/text_color" />

    <EditText
        android:id="@+id/newLatText"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/text01"
        android:inputType="numberSigned|numberDecimal" />

    <TextView
        android:id="@+id/text02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newLatText"
        android:text="@string/loc_lng"
        android:textColor="@color/text_color" />

    <EditText
        android:id="@+id/newLongText"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/text02"
        android:inputType="numberSigned|numberDecimal" />

    <View
        android:id="@+id/view02"
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:layout_below="@+id/newLongText" />

    <TextView
        android:id="@+id/text03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view02"
        android:layout_gravity="center"
        android:text="@string/loc_ele"
        android:textColor="@color/text_color" />

    <EditText
        android:id="@+id/newElevationText"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/text03"
        android:inputType="numberSigned|numberDecimal" />

    <TextView
        android:id="@+id/text04"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newElevationText"
        android:layout_gravity="center"
        android:text="@string/loc_gmt"
        android:textColor="@color/text_color" />

    <Spinner
        android:id="@+id/newOffsetSpin"
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:layout_below="@+id/text04"
        android:gravity="center_horizontal" />

    <View
        android:id="@+id/view03"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_below="@+id/newOffsetSpin" />

    <Button
        android:id="@+id/saveLocButton"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/view03"
        android:text="@string/save"
        android:textSize="@dimen/pos_planet_name" />

</RelativeLayout>